# python-ops-oop

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: scenario_1.ipynb  scenario_2.ipynb  scenario_oop.ipynb  scenario_together.ipynb
src/tutor_router/: pretend_service.py  scenarios.py
